<resources>
    <string name="app_name">HYUNDAI QUIZ</string>
    <string name="Q_1_answer_is_missing_You_must_chose_1_choice">Q 1 answer is missing .You must chose 1 choice</string>
    <string name="Q_2_answer_is_missing_You_must_chose_1_choice">Q 2 answer is missing .You must chose 1 choice</string>
    <string name="Q_3_answer_is_missing_You_must_chose_1_choice">Q 3 answer is missing .You must chose 1 choice</string>
    <string name="Q_4_answer_is_missing_You_must_chose_2_Check_box_only">Q 4 answer is missing .You must chose 2 Check box only</string>
    <string name="Q_5_answer_is_missing_You_must_edit_the_correct_Year"> Q 5 answer is missing .You must edit the correct Year</string>
    <string name="Q_6_answer_is_missing_You_must_chose_2_Check_box_only">Q 6 answer is missing .You must chose 2 Check box only</string>
    <string name="Q_7_answer_is_missing_You_must_chose_1_choice">Q 7 answer is missing .You must chose 1 choice</string>
    <string name="Q_8_answer_is_missing_You_must_chose_1_choice">Q 8 answer is missing .You must chose 1 choice</string>
    <string name="your_score_of_this_Quiz">your score of this Quiz is\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="_8_congratulations">\u0020/ 8\n\u0020\u0020\u0020\u0020\u0020Congratulations</string>
    <string name="_8_Try_Agan">\u0020/  8\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Try Agane</string>
    <string name="_1967">1967</string>
    <string name="welcome_to_Hyundai_Quiz">welcome to Hyundai Quiz</string>
    <string name="check_your_information">You Can Check Your Information about Hyundai Company If You Answer this Questions..</string>
    <string name="Q_1">Question 1 :</string>
    <string name="Q_1_text">In what country is Hyundai Headquartered ?</string>
    <string name="Japan">Japan</string>
    <string name="China">China</string>
    <string name="South_Korea">South Korea</string>
    <string name="Q_2">Question 2 :</string>
    <string name="Q_2_text">How much horsepower does a 2012 Hyundai\nGenesis R-Spec feature ?</string>
    <string name="_429">429</string>
    <string name="_317">317</string>
    <string name="_388">388</string>
    <string name="Q_3">Question 3 :</string>
    <string name="Q_3_text">Which of the following has been\nHyundai is slogan ?</string>
    <string name="New_Thinking_New_Possibilities">New Thinking. New Possibilities</string>
    <string name="The_Power_to_Surprise">The Power to Surprise</string>
    <string name="Never_Follow">Never Follow</string>
    <string name="Q_4">Question 4 :</string>
    <string name="Q_4_text">Which of the following was NOT a Hyundai model ? (2 only)</string>
    <string name="Excel">Excel</string>
    <string name="Pulsar">Pulsar</string>
    <string name="Cerato">Cerato</string>
    <string name="i10">i10</string>
    <string name="Q_5">Question 5 :</string>
    <string name="Q_5_text">In what year was Hyundai Motor Company founded ?</string>
    <string name="Year">Year</string>
    <string name="Q_6">Question 6 :</string>
    <string name="Q_6_text">What brand is the same as the country of origin of Hyundai ? (2 only)</string>
    <string name="Suzuki">Suzuki</string>
    <string name="Isuzu">Isuzu</string>
    <string name="Kia">Kia</string>
    <string name="SsangYong">SsangYong</string>
    <string name="Q_7">Question 7 :</string>
    <string name="Q_7_text">What size wheels does a 2012 Hyundai Genesis 5.0 R-Spec have ?</string>
    <string name="_18_inch">18 inch</string>
    <string name="_19_inch">19 inch</string>
    <string name="_20_inch">20 inch</string>
    <string name="Q_8">Question 8 :</string>
    <string name="Q_8_text">Which car has the fastest 0-60 time ?</string>
    <string name="_2012_Hyundai_Azera_Limited">2012 Hyundai Azera Limited</string>
    <string name="_2013_Hyundai_Genesis">2013 Hyundai Genesis Coupe 3.8 R-Spec</string>
    <string name="_2009_Hyundai_Genesis">2009 Hyundai Genesis 4.6 Sedan</string>
    <string name="check_your_Score">check your Score</string>
    <string name="_0">0</string>
    <string name="Answers">Answers</string>
    <string name="reset">reset</string>

</resources>
